--- a/src/JNotepad.form
+++ b/src/JNotepad.form
@@ -570,6 +570,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuFormatFont">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="/home/noe/NetBeansProjects/JNotepad/icon/font.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Font..."/>
               </Properties>
               <Events>
